--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@fontsource/roboto": "^5.0.8",
         "@mui/icons-material": "^5.14.8",
         "@mui/material": "^5.14.7",
+        "@react-spring/web": "^9.7.3",
         "@reduxjs/toolkit": "^1.9.5",
         "axios": "^1.5.0",
         "react": "^18.2.0",
